Card Initial design

--- a/src/app/app.ng.html
+++ b/src/app/app.ng.html
@@ -37,28 +37,261 @@
       class="join-now-button"
       style="
         color: rgb(255, 255, 255);
-        padding: 1rem;
+        padding: 0.5rem 1rem;
         border-radius: 9999px;
         font-weight: 600;
       "
     >
       Register Now
     </button>
-
-    <div>
+    <div
+      style="
+        margin-top: 1.5rem;
+        font-size: 56px;
+        border: 3px solid #00bcff;
+        border-radius: 9999px;
+      "
+    >
       <number-flow-group
         style="
           font-variant-numeric: tabular-nums;
-          --number-flow-char-height: 0.85em;
+          --number-flow-char-height: 1rem;
         "
-        style="display: flex; gap: 1rem; color: white; align-items: baseline"
+        style="
+          display: inline-flex;
+          gap: 1rem;
+          color: white;
+          align-items: baseline;
+        "
       >
         <number-flow #hours></number-flow>
         <number-flow #minutes></number-flow>
         <number-flow #seconds></number-flow>
       </number-flow-group>
     </div>
+    <!-- <span
+      style="
+        color: white;
+        font-weight: 700;
+        font-size: 24px;
+        border: 1px solid white;
+        padding: 0.25rem;
+        border-radius: 9999px;
+        display: inline-flex;
+      "
+    >
+      TBD
+    </span> -->
   </div>
 </section>
-<section></section>
+<section class="prize-categories-section">
+  <h2>Prize Categories</h2>
+</section>
+<section class="meet-our-judge-section">
+  <h2>Prize Categories</h2>
+  <ul class="cards" id="cards"> <li class="card" id="card_1"> <div class="card__content">
+        <figure class="alt">
+          <img
+            class="speaker-img"
+            src="
+            https://media.licdn.com/dms/image/v2/D5603AQHO11rjwIIVXg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1690595857107?e=1747872000&v=beta&t=pOHERNcSSQ9fdT_tPVBPoj77j8vnNCUuB8FU-WBCjn4
+            "
+            alt="Sarah Guo"
+          />
+          <figcaption style="color: white">Sarah Guo</figcaption>
+        </figure>
+        <div></div>
+      </div>
+    </li>
+    <li class="card" id="card_2" style="flex-direction: row-reverse">
+      <div class="card__content">
+        <div style="color: white"></div>
+        <figure class="alt">
+          <img
+            class="speaker-img"
+            src="
+            https://pbs.twimg.com/profile_images/1799982162831396865/Fnol01I1_400x400.jpg
+            "
+            alt="Theo"
+          />
+          <figcaption style="color: white">Theo Browne</figcaption>
+        </figure>
+      </div>
+      <!-- Content here -->
+    </li>
+
+    <li class="card" id="card_3">
+      <div class="card__content">
+        <div style="color: white"></div>
+        <figure class="alt">
+          <img
+            class="speaker-img"
+            src="
+            https://pbs.twimg.com/profile_images/1856284397072478208/hSEXLkPN_400x400.jpg
+            "
+            alt="Evan You"
+          />
+          <figcaption style="color: white">Evan You</figcaption>
+        </figure>
+      </div>
+    </li>
+    <li class="card" id="card_4" style="flex-direction: row-reverse">
+      <div class="card__content">
+        <div style="color: white"></div>
+        <figure class="alt">
+          <img
+            class="speaker-img"
+            src="
+            https://media.licdn.com/dms/image/v2/D4E03AQER6WgLI07vzw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1705801044880?e=1747872000&v=beta&t=U7qZCTHdVrHc1xeyGh6PWLJxUQ4YdwjgSTydeW-UNeo
+            "
+            alt="Karthik Puvvada"
+          />
+          <figcaption style="color: white">Karthik Puvvada</figcaption>
+        </figure>
+      </div>
+    </li>
+    <li class="card" id="card_5">
+      <div class="card__content">
+        <div style="color: white"></div>
+        <figure class="alt">
+          <img
+            class="speaker-img"
+            src="
+            https://pbs.twimg.com/profile_images/1878086921726943233/vOx1kjeP_400x400.jpg
+            "
+            alt="Ben Tossell"
+          />
+          <figcaption style="color: white">Ben Tossell</figcaption>
+        </figure>
+      </div>
+    </li>
+
+    <li class="card" id="card_6" style="flex-direction: row-reverse">
+      <div class="card__content">
+        <div style="color: white"></div>
+        <figure class="alt">
+          <img
+            class="speaker-img"
+            src="
+            https://pbs.twimg.com/profile_images/1856486626072915968/JEQpB9CW_400x400.jpg
+            "
+            alt="Alex Albert"
+          />
+          <figcaption style="color: white">Alex Albert</figcaption>
+        </figure>
+      </div>
+      <!-- Content here -->
+    </li>
+  </ul>
+</section>
+<aside>
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem repellat non
+    ratione eum provident quaerat obcaecati dicta autem voluptates sit cum quis
+    distinctio, atque sint commodi reprehenderit perspiciatis iure velit
+    molestiae eos molestias ipsa nihil quia? Porro tempore in fugit, aspernatur
+    et temporibus aliquam magnam adipisci deleniti dicta repellat alias nostrum
+    impedit quidem odit excepturi nam. Itaque numquam unde quae dignissimos
+    exercitationem placeat, ipsa amet tempora vitae ullam animi! Hic asperiores
+    in esse atque expedita dolorem officia illo commodi fugit earum ab,
+    assumenda optio, sed repellat. Maiores laudantium reprehenderit suscipit
+    accusamus assumenda, debitis nemo ut sapiente numquam doloremque alias
+    explicabo minus autem harum illum dicta. Unde obcaecati inventore repellat
+    id eligendi eaque, rerum aliquam maiores aspernatur cumque tenetur quo qui
+    mollitia atque quasi voluptate ipsum neque explicabo voluptatem quibusdam
+    beatae quae iste vero doloribus! Natus libero quibusdam molestias harum
+    atque, assumenda doloribus quis, quam corporis, voluptas suscipit magni!
+    Enim sapiente totam consequatur repellat maxime placeat perferendis iste
+    maiores soluta, obcaecati incidunt expedita eius cumque ipsa quo sed. Minus
+    distinctio culpa cumque labore nulla laborum ex, explicabo magni mollitia
+    eaque aliquam vero blanditiis quae, id necessitatibus error voluptas harum
+    tempora sint porro. Facilis beatae quasi soluta et ipsum suscipit
+    repellendus inventore.
+  </p>
+
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, ipsam
+    molestias. Fuga similique, dolor tempora rerum perferendis ipsam ullam
+    doloribus beatae esse facilis quae sit excepturi expedita non, sunt
+    accusantium magnam? Animi nesciunt nostrum eligendi iusto voluptatum hic
+    qui. Quod distinctio qui nobis et doloremque. Fuga, itaque? Laborum
+    dignissimos nobis quaerat optio voluptatum similique unde, neque cupiditate,
+    vel, fugiat dolore? Accusantium neque deserunt ducimus enim, illum laborum
+    magni ipsam eos optio aspernatur nam necessitatibus quod natus, dolor
+    laboriosam illo velit.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem repellat non
+    ratione eum provident quaerat obcaecati dicta autem voluptates sit cum quis
+    distinctio, atque sint commodi reprehenderit perspiciatis iure velit
+    molestiae eos molestias ipsa nihil quia? Porro tempore in fugit, aspernatur
+    et temporibus aliquam magnam adipisci deleniti dicta repellat alias nostrum
+    impedit quidem odit excepturi nam. Itaque numquam unde quae dignissimos
+    exercitationem placeat, ipsa amet tempora vitae ullam animi! Hic asperiores
+    in esse atque expedita dolorem officia illo commodi fugit earum ab,
+    assumenda optio, sed repellat. Maiores laudantium reprehenderit suscipit
+    accusamus assumenda, debitis nemo ut sapiente numquam doloremque alias
+    explicabo minus autem harum illum dicta. Unde obcaecati inventore repellat
+    id eligendi eaque, rerum aliquam maiores aspernatur cumque tenetur quo qui
+    mollitia atque quasi voluptate ipsum neque explicabo voluptatem quibusdam
+    beatae quae iste vero doloribus! Natus libero quibusdam molestias harum
+    atque, assumenda doloribus quis, quam corporis, voluptas suscipit magni!
+    Enim sapiente totam consequatur repellat maxime placeat perferendis iste
+    maiores soluta, obcaecati incidunt expedita eius cumque ipsa quo sed. Minus
+    distinctio culpa cumque labore nulla laborum ex, explicabo magni mollitia
+    eaque aliquam vero blanditiis quae, id necessitatibus error voluptas harum
+    tempora sint porro. Facilis beatae quasi soluta et ipsum suscipit
+    repellendus inventore.
+  </p>
+
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, ipsam
+    molestias. Fuga similique, dolor tempora rerum perferendis ipsam ullam
+    doloribus beatae esse facilis quae sit excepturi expedita non, sunt
+    accusantium magnam? Animi nesciunt nostrum eligendi iusto voluptatum hic
+    qui. Quod distinctio qui nobis et doloremque. Fuga, itaque? Laborum
+    dignissimos nobis quaerat optio voluptatum similique unde, neque cupiditate,
+    vel, fugiat dolore? Accusantium neque deserunt ducimus enim, illum laborum
+    magni ipsam eos optio aspernatur nam necessitatibus quod natus, dolor
+    laboriosam illo velit.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem repellat non
+    ratione eum provident quaerat obcaecati dicta autem voluptates sit cum quis
+    distinctio, atque sint commodi reprehenderit perspiciatis iure velit
+    molestiae eos molestias ipsa nihil quia? Porro tempore in fugit, aspernatur
+    et temporibus aliquam magnam adipisci deleniti dicta repellat alias nostrum
+    impedit quidem odit excepturi nam. Itaque numquam unde quae dignissimos
+    exercitationem placeat, ipsa amet tempora vitae ullam animi! Hic asperiores
+    in esse atque expedita dolorem officia illo commodi fugit earum ab,
+    assumenda optio, sed repellat. Maiores laudantium reprehenderit suscipit
+    accusamus assumenda, debitis nemo ut sapiente numquam doloremque alias
+    explicabo minus autem harum illum dicta. Unde obcaecati inventore repellat
+    id eligendi eaque, rerum aliquam maiores aspernatur cumque tenetur quo qui
+    mollitia atque quasi voluptate ipsum neque explicabo voluptatem quibusdam
+    beatae quae iste vero doloribus! Natus libero quibusdam molestias harum
+    atque, assumenda doloribus quis, quam corporis, voluptas suscipit magni!
+    Enim sapiente totam consequatur repellat maxime placeat perferendis iste
+    maiores soluta, obcaecati incidunt expedita eius cumque ipsa quo sed. Minus
+    distinctio culpa cumque labore nulla laborum ex, explicabo magni mollitia
+    eaque aliquam vero blanditiis quae, id necessitatibus error voluptas harum
+    tempora sint porro. Facilis beatae quasi soluta et ipsum suscipit
+    repellendus inventore.
+  </p>
+
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, ipsam
+    molestias. Fuga similique, dolor tempora rerum perferendis ipsam ullam
+    doloribus beatae esse facilis quae sit excepturi expedita non, sunt
+    accusantium magnam? Animi nesciunt nostrum eligendi iusto voluptatum hic
+    qui. Quod distinctio qui nobis et doloremque. Fuga, itaque? Laborum
+    dignissimos nobis quaerat optio voluptatum similique unde, neque cupiditate,
+    vel, fugiat dolore? Accusantium neque deserunt ducimus enim, illum laborum
+    magni ipsam eos optio aspernatur nam necessitatibus quod natus, dolor
+    laboriosam illo velit.
+  </p>
+</aside>
 <router-outlet />
+<footer style="position: sticky; width: 100%">
+  <div></div>
+</footer>
