--- a/src/app/app.ng.html
+++ b/src/app/app.ng.html
@@ -86,26 +86,56 @@
 </section>
 <section class="prize-categories-section">
   <h2>Prize Categories</h2>
+  <div
+    style="
+      gap: 1rem;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      padding: 3rem;
+    "
+  >
+    <div class="prize-card">1</div>
+    <div class="prize-card">2</div>
+    <div class="prize-card">3</div>
+  </div>
 </section>
 <section class="meet-our-judge-section">
-  <h2>Prize Categories</h2>
-  <ul class="cards" id="cards"> <li class="card" id="card_1"> <div class="card__content">
+  <h2>Meet Our Judges</h2>
+  <ul id="cards">
+    <li class="card" id="card_1">
+      <div class="card__content">
+        <div>
+          <div>
+            <p class="speaker-desc">
+              Sarah Guo is an American investor. She is the founder and managing
+              partner at the venture capital firm Conviction and formerly a
+              general partner at Greylock Partners.
+            </p>
+          </div>
+        </div>
         <figure class="alt">
           <img
             class="speaker-img"
             src="
-            https://media.licdn.com/dms/image/v2/D5603AQHO11rjwIIVXg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1690595857107?e=1747872000&v=beta&t=pOHERNcSSQ9fdT_tPVBPoj77j8vnNCUuB8FU-WBCjn4
-            "
+          https://media.licdn.com/dms/image/v2/D5603AQHO11rjwIIVXg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1690595857107?e=1747872000&v=beta&t=pOHERNcSSQ9fdT_tPVBPoj77j8vnNCUuB8FU-WBCjn4
+          "
             alt="Sarah Guo"
           />
           <figcaption style="color: white">Sarah Guo</figcaption>
         </figure>
-        <div></div>
       </div>
     </li>
-    <li class="card" id="card_2" style="flex-direction: row-reverse">
+    <li class="card" id="card_2">
       <div class="card__content">
-        <div style="color: white"></div>
+        <div>
+          <div>
+            <p class="speaker-desc">
+              Full time CEO
+              <a href="https://t3.chat/chat/welcome"> &#64;t3dotchat. </a>
+              Part time YouTuber, investor, and developer
+            </p>
+          </div>
+        </div>
         <figure class="alt">
           <img
             class="speaker-img"
@@ -117,12 +147,18 @@
           <figcaption style="color: white">Theo Browne</figcaption>
         </figure>
       </div>
-      <!-- Content here -->
     </li>
-
     <li class="card" id="card_3">
       <div class="card__content">
-        <div style="color: white"></div>
+        <div style="color: white">
+          <div>
+            <p class="speaker-desc">
+              I am the founder of VoidZero, a company building the next
+              generation toolchain for JavaScript and TypeScript. I am currently
+              based in Singapore working with a globally remote team.
+            </p>
+          </div>
+        </div>
         <figure class="alt">
           <img
             class="speaker-img"
@@ -135,9 +171,17 @@
         </figure>
       </div>
     </li>
-    <li class="card" id="card_4" style="flex-direction: row-reverse">
+    <li class="card" id="card_4">
       <div class="card__content">
-        <div style="color: white"></div>
+        <div style="color: white">
+          <div>
+            <p class="speaker-desc">
+              Karthik Puvvada (known by his friends and audience as "KP") is a
+              5x founder, podcast host, angel investor, advisor, coach and a top
+              voice in the "build in public" movement.
+            </p>
+          </div>
+        </div>
         <figure class="alt">
           <img
             class="speaker-img"
@@ -152,23 +196,39 @@
     </li>
     <li class="card" id="card_5">
       <div class="card__content">
-        <div style="color: white"></div>
+        <div style="color: white">
+          <div>
+            <p class="speaker-desc">
+              Serial entrepreneur and pioneer of the digital nomad movement.
+              Built multiple $1M+/year bootstrapped startups and author of MAKE,
+              inspiring a new generation of indie makers.
+            </p>
+          </div>
+        </div>
         <figure class="alt">
           <img
             class="speaker-img"
             src="
-            https://pbs.twimg.com/profile_images/1878086921726943233/vOx1kjeP_400x400.jpg
-            "
+              https://pbs.twimg.com/profile_images/1878086921726943233/vOx1kjeP_400x400.jpg
+              "
             alt="Ben Tossell"
           />
           <figcaption style="color: white">Ben Tossell</figcaption>
         </figure>
+        <!-- Content here -->
       </div>
     </li>
-
-    <li class="card" id="card_6" style="flex-direction: row-reverse">
+    <li class="card" id="card_6">
       <div class="card__content">
-        <div style="color: white"></div>
+        <div style="color: white">
+          <div>
+            <p class="speaker-desc">
+              AI and machine learning advocate at Google DeepMind. Former Julia
+              Language org admin and Harvard graduate, bridging the gap between
+              cutting-edge AI research and developer communities.
+            </p>
+          </div>
+        </div>
         <figure class="alt">
           <img
             class="speaker-img"
@@ -180,117 +240,9 @@
           <figcaption style="color: white">Alex Albert</figcaption>
         </figure>
       </div>
-      <!-- Content here -->
     </li>
   </ul>
 </section>
-<aside>
-  <p>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem repellat non
-    ratione eum provident quaerat obcaecati dicta autem voluptates sit cum quis
-    distinctio, atque sint commodi reprehenderit perspiciatis iure velit
-    molestiae eos molestias ipsa nihil quia? Porro tempore in fugit, aspernatur
-    et temporibus aliquam magnam adipisci deleniti dicta repellat alias nostrum
-    impedit quidem odit excepturi nam. Itaque numquam unde quae dignissimos
-    exercitationem placeat, ipsa amet tempora vitae ullam animi! Hic asperiores
-    in esse atque expedita dolorem officia illo commodi fugit earum ab,
-    assumenda optio, sed repellat. Maiores laudantium reprehenderit suscipit
-    accusamus assumenda, debitis nemo ut sapiente numquam doloremque alias
-    explicabo minus autem harum illum dicta. Unde obcaecati inventore repellat
-    id eligendi eaque, rerum aliquam maiores aspernatur cumque tenetur quo qui
-    mollitia atque quasi voluptate ipsum neque explicabo voluptatem quibusdam
-    beatae quae iste vero doloribus! Natus libero quibusdam molestias harum
-    atque, assumenda doloribus quis, quam corporis, voluptas suscipit magni!
-    Enim sapiente totam consequatur repellat maxime placeat perferendis iste
-    maiores soluta, obcaecati incidunt expedita eius cumque ipsa quo sed. Minus
-    distinctio culpa cumque labore nulla laborum ex, explicabo magni mollitia
-    eaque aliquam vero blanditiis quae, id necessitatibus error voluptas harum
-    tempora sint porro. Facilis beatae quasi soluta et ipsum suscipit
-    repellendus inventore.
-  </p>
-
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, ipsam
-    molestias. Fuga similique, dolor tempora rerum perferendis ipsam ullam
-    doloribus beatae esse facilis quae sit excepturi expedita non, sunt
-    accusantium magnam? Animi nesciunt nostrum eligendi iusto voluptatum hic
-    qui. Quod distinctio qui nobis et doloremque. Fuga, itaque? Laborum
-    dignissimos nobis quaerat optio voluptatum similique unde, neque cupiditate,
-    vel, fugiat dolore? Accusantium neque deserunt ducimus enim, illum laborum
-    magni ipsam eos optio aspernatur nam necessitatibus quod natus, dolor
-    laboriosam illo velit.
-  </p>
-  <p>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem repellat non
-    ratione eum provident quaerat obcaecati dicta autem voluptates sit cum quis
-    distinctio, atque sint commodi reprehenderit perspiciatis iure velit
-    molestiae eos molestias ipsa nihil quia? Porro tempore in fugit, aspernatur
-    et temporibus aliquam magnam adipisci deleniti dicta repellat alias nostrum
-    impedit quidem odit excepturi nam. Itaque numquam unde quae dignissimos
-    exercitationem placeat, ipsa amet tempora vitae ullam animi! Hic asperiores
-    in esse atque expedita dolorem officia illo commodi fugit earum ab,
-    assumenda optio, sed repellat. Maiores laudantium reprehenderit suscipit
-    accusamus assumenda, debitis nemo ut sapiente numquam doloremque alias
-    explicabo minus autem harum illum dicta. Unde obcaecati inventore repellat
-    id eligendi eaque, rerum aliquam maiores aspernatur cumque tenetur quo qui
-    mollitia atque quasi voluptate ipsum neque explicabo voluptatem quibusdam
-    beatae quae iste vero doloribus! Natus libero quibusdam molestias harum
-    atque, assumenda doloribus quis, quam corporis, voluptas suscipit magni!
-    Enim sapiente totam consequatur repellat maxime placeat perferendis iste
-    maiores soluta, obcaecati incidunt expedita eius cumque ipsa quo sed. Minus
-    distinctio culpa cumque labore nulla laborum ex, explicabo magni mollitia
-    eaque aliquam vero blanditiis quae, id necessitatibus error voluptas harum
-    tempora sint porro. Facilis beatae quasi soluta et ipsum suscipit
-    repellendus inventore.
-  </p>
-
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, ipsam
-    molestias. Fuga similique, dolor tempora rerum perferendis ipsam ullam
-    doloribus beatae esse facilis quae sit excepturi expedita non, sunt
-    accusantium magnam? Animi nesciunt nostrum eligendi iusto voluptatum hic
-    qui. Quod distinctio qui nobis et doloremque. Fuga, itaque? Laborum
-    dignissimos nobis quaerat optio voluptatum similique unde, neque cupiditate,
-    vel, fugiat dolore? Accusantium neque deserunt ducimus enim, illum laborum
-    magni ipsam eos optio aspernatur nam necessitatibus quod natus, dolor
-    laboriosam illo velit.
-  </p>
-  <p>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem repellat non
-    ratione eum provident quaerat obcaecati dicta autem voluptates sit cum quis
-    distinctio, atque sint commodi reprehenderit perspiciatis iure velit
-    molestiae eos molestias ipsa nihil quia? Porro tempore in fugit, aspernatur
-    et temporibus aliquam magnam adipisci deleniti dicta repellat alias nostrum
-    impedit quidem odit excepturi nam. Itaque numquam unde quae dignissimos
-    exercitationem placeat, ipsa amet tempora vitae ullam animi! Hic asperiores
-    in esse atque expedita dolorem officia illo commodi fugit earum ab,
-    assumenda optio, sed repellat. Maiores laudantium reprehenderit suscipit
-    accusamus assumenda, debitis nemo ut sapiente numquam doloremque alias
-    explicabo minus autem harum illum dicta. Unde obcaecati inventore repellat
-    id eligendi eaque, rerum aliquam maiores aspernatur cumque tenetur quo qui
-    mollitia atque quasi voluptate ipsum neque explicabo voluptatem quibusdam
-    beatae quae iste vero doloribus! Natus libero quibusdam molestias harum
-    atque, assumenda doloribus quis, quam corporis, voluptas suscipit magni!
-    Enim sapiente totam consequatur repellat maxime placeat perferendis iste
-    maiores soluta, obcaecati incidunt expedita eius cumque ipsa quo sed. Minus
-    distinctio culpa cumque labore nulla laborum ex, explicabo magni mollitia
-    eaque aliquam vero blanditiis quae, id necessitatibus error voluptas harum
-    tempora sint porro. Facilis beatae quasi soluta et ipsum suscipit
-    repellendus inventore.
-  </p>
-
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, ipsam
-    molestias. Fuga similique, dolor tempora rerum perferendis ipsam ullam
-    doloribus beatae esse facilis quae sit excepturi expedita non, sunt
-    accusantium magnam? Animi nesciunt nostrum eligendi iusto voluptatum hic
-    qui. Quod distinctio qui nobis et doloremque. Fuga, itaque? Laborum
-    dignissimos nobis quaerat optio voluptatum similique unde, neque cupiditate,
-    vel, fugiat dolore? Accusantium neque deserunt ducimus enim, illum laborum
-    magni ipsam eos optio aspernatur nam necessitatibus quod natus, dolor
-    laboriosam illo velit.
-  </p>
-</aside>
 <router-outlet />
 <footer style="position: sticky; width: 100%">
   <div></div>
