--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,11 +1,14 @@
-@import "./card.css";
+/* @import "./card.css"; */
 
+@import "./card1.css";
+@import "./prize.css";
 :host {
   --icon: url("data:image/svg+xml;utf8,%3Csvg width='1em' height='1em' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 51 21.9'%3E%3Cpath d='M24.1 19.3c-4.7 0-7-2.7-7-6.1s3.2-7.7 7.9-7.7 7 2.7 7 6.1-3.2 7.7-7.9 7.7Zm.2-4.3c1.6 0 2.7-1.5 2.7-3.1s-.8-2-2.2-2-2.7 1.5-2.7 3.1.8 2 2.2 2ZM37 19h-4.9l4-18.2H41l-4 18.1Z'/%3E%3Cpath d='M9.6 19.3c-1.5 0-3-.5-3.8-1.7L5.5 19 0 21.9.6 19 4.6.8h4.9L8.1 7.2c1.1-1.2 2.2-1.7 3.6-1.7 3 0 4.9 1.9 4.9 5.5s-2.3 8.3-7 8.3Zm1.9-7.3c0 1.7-1.2 3-2.8 3s-1.7-.3-2.2-.9l.8-3.3c.6-.6 1.2-.9 2-.9 1.2 0 2.2.9 2.2 2.2Z' style='fill-rule:evenodd'/%3E%3Cpath d='M46.1 19.3c-2.8 0-4.9-1-4.9-3.3s0-.7.1-1l1.1-4.9h-2.2l1-4.2h2.2l.8-3.6L49.7 0l-.6 2.3-.8 3.6H51l-1 4.2h-2.7l-.7 3.2v.6c0 .6.4 1.1 1.2 1.1s.6 0 .7-.1v3.9c-.5.4-1.4.5-2.3.5Z'/%3E%3C/svg%3E");
 }
 .header {
   position: sticky;
   top: 20px;
+  z-index: 9999;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -109,19 +112,35 @@ li {
   padding-bottom: 1rem;
   color: white;
   padding-top: 1rem;
+  display: grid;
+  align-items: center;
+  justify-content: center;
   h2 {
     text-align: center;
-    font-size: 2.875rem;
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-    font-weight: 700;
-    line-height: 2.25rem;
+    font-size: 44px;
+    line-height: 44px;
+    font-weight: 600;
     color: white;
   }
 }
 .meet-our-judge-section {
+  /* padding: 6rem; */
   padding: 1rem;
   display: grid;
   align-items: center;
   justify-content: center;
+  h2 {
+    padding-bottom: 3rem;
+    text-align: center;
+    font-size: 44px;
+    line-height: 44px;
+    font-weight: 600;
+    color: white;
+  }
+}
+.prize-card {
+  width: 300px;
+  height: 300px;
+  background: white;
+  background-color: rgba(23, 23, 23, 0.8);
 }
