--- a/src/app/app.ng.html
+++ b/src/app/app.ng.html
@@ -27,49 +27,50 @@
     </div>
   </div>
 </header>
-<section class="hero-section">
-  <div class="container">
-    <h1 style="color: white">The World's Largest Hackathon</h1>
-    <p style="color: white">
-      Join thousands of developers worldwide in building the future
-    </p>
-    <button
-      class="join-now-button"
-      style="
-        color: rgb(255, 255, 255);
-        padding: 0.5rem 1rem;
-        border-radius: 9999px;
-        font-weight: 600;
-      "
-    >
-      Register Now
-    </button>
-    <div
-      style="
-        margin-top: 1.5rem;
-        font-size: 56px;
-        border: 3px solid #00bcff;
-        border-radius: 9999px;
-      "
-    >
-      <number-flow-group
+<main>
+  <section class="hero-section">
+    <div class="container">
+      <h1 style="color: white">The World's Largest Hackathon</h1>
+      <p style="color: white">
+        Join thousands of developers worldwide in building the future
+      </p>
+      <button
+        class="join-now-button"
         style="
-          font-variant-numeric: tabular-nums;
-          --number-flow-char-height: 1rem;
-        "
-        style="
-          display: inline-flex;
-          gap: 1rem;
-          color: white;
-          align-items: baseline;
+          color: rgb(255, 255, 255);
+          padding: 0.5rem 1rem;
+          border-radius: 9999px;
+          font-weight: 600;
         "
       >
-        <number-flow #hours></number-flow>
-        <number-flow #minutes></number-flow>
-        <number-flow #seconds></number-flow>
-      </number-flow-group>
-    </div>
-    <!-- <span
+        Register Now
+      </button>
+      <div
+        style="
+          margin-top: 1.5rem;
+          font-size: 56px;
+          border: 3px solid #00bcff;
+          border-radius: 9999px;
+        "
+      >
+        <number-flow-group
+          style="
+            font-variant-numeric: tabular-nums;
+            --number-flow-char-height: 1rem;
+          "
+          style="
+            display: inline-flex;
+            gap: 1rem;
+            color: white;
+            align-items: baseline;
+          "
+        >
+          <number-flow #hours></number-flow>
+          <number-flow #minutes></number-flow>
+          <number-flow #seconds></number-flow>
+        </number-flow-group>
+      </div>
+      <!-- <span
       style="
         color: white;
         font-weight: 700;
@@ -82,168 +83,182 @@
     >
       TBD
     </span> -->
-  </div>
-</section>
-<section class="prize-categories-section">
-  <h2>Prize Categories</h2>
-  <div
-    style="
-      gap: 1rem;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      padding: 3rem;
-    "
-  >
-    <div class="prize-card">1</div>
-    <div class="prize-card">2</div>
-    <div class="prize-card">3</div>
-  </div>
-</section>
-<section class="meet-our-judge-section">
-  <h2>Meet Our Judges</h2>
-  <ul id="cards">
-    <li class="card" id="card_1">
-      <div class="card__content">
-        <div>
+    </div>
+  </section>
+  <section class="prize-categories-section">
+    <h2>Prize Categories</h2>
+    <div
+      style="
+        gap: 1rem;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        padding: 3rem;
+      "
+    >
+      <div class="prize-card">1</div>
+      <div class="prize-card">2</div>
+      <div class="prize-card">3</div>
+    </div>
+  </section>
+  <section class="meet-our-judge-section">
+    <h2>Meet Our Judges</h2>
+    <ul id="cards">
+      <li class="card" id="card_1">
+        <div class="card__content">
           <div>
-            <p class="speaker-desc">
-              Sarah Guo is an American investor. She is the founder and managing
-              partner at the venture capital firm Conviction and formerly a
-              general partner at Greylock Partners.
-            </p>
+            <div>
+              <p class="speaker-desc">
+                Sarah Guo is an American investor. She is the founder and
+                managing partner at the venture capital firm Conviction and
+                formerly a general partner at Greylock Partners.
+              </p>
+            </div>
           </div>
-        </div>
-        <figure class="alt">
-          <img
-            class="speaker-img"
-            src="
+          <figure class="alt">
+            <img
+              class="speaker-img"
+              src="
           https://media.licdn.com/dms/image/v2/D5603AQHO11rjwIIVXg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1690595857107?e=1747872000&v=beta&t=pOHERNcSSQ9fdT_tPVBPoj77j8vnNCUuB8FU-WBCjn4
           "
-            alt="Sarah Guo"
-          />
-          <figcaption style="color: white">Sarah Guo</figcaption>
-        </figure>
-      </div>
-    </li>
-    <li class="card" id="card_2">
-      <div class="card__content">
-        <div>
-          <div>
-            <p class="speaker-desc">
-              Full time CEO
-              <a href="https://t3.chat/chat/welcome"> &#64;t3dotchat. </a>
-              Part time YouTuber, investor, and developer
-            </p>
-          </div>
+              alt="Sarah Guo"
+            />
+            <figcaption style="color: white">Sarah Guo</figcaption>
+          </figure>
         </div>
-        <figure class="alt">
-          <img
-            class="speaker-img"
-            src="
+      </li>
+      <li class="card" id="card_2">
+        <div class="card__content">
+          <div>
+            <div>
+              <p class="speaker-desc">
+                Full time CEO
+                <a href="https://t3.chat/chat/welcome"> &#64;t3dotchat. </a>
+                Part time YouTuber, investor, and developer
+              </p>
+            </div>
+          </div>
+          <figure class="alt">
+            <img
+              class="speaker-img"
+              src="
             https://pbs.twimg.com/profile_images/1799982162831396865/Fnol01I1_400x400.jpg
             "
-            alt="Theo"
-          />
-          <figcaption style="color: white">Theo Browne</figcaption>
-        </figure>
-      </div>
-    </li>
-    <li class="card" id="card_3">
-      <div class="card__content">
-        <div style="color: white">
-          <div>
-            <p class="speaker-desc">
-              I am the founder of VoidZero, a company building the next
-              generation toolchain for JavaScript and TypeScript. I am currently
-              based in Singapore working with a globally remote team.
-            </p>
-          </div>
+              alt="Theo"
+            />
+            <figcaption style="color: white">Theo Browne</figcaption>
+          </figure>
         </div>
-        <figure class="alt">
-          <img
-            class="speaker-img"
-            src="
+      </li>
+      <li class="card" id="card_3">
+        <div class="card__content">
+          <div style="color: white">
+            <div>
+              <p class="speaker-desc">
+                I am the founder of VoidZero, a company building the next
+                generation toolchain for JavaScript and TypeScript. I am
+                currently based in Singapore working with a globally remote
+                team.
+              </p>
+            </div>
+          </div>
+          <figure class="alt">
+            <img
+              class="speaker-img"
+              src="
             https://pbs.twimg.com/profile_images/1856284397072478208/hSEXLkPN_400x400.jpg
             "
-            alt="Evan You"
-          />
-          <figcaption style="color: white">Evan You</figcaption>
-        </figure>
-      </div>
-    </li>
-    <li class="card" id="card_4">
-      <div class="card__content">
-        <div style="color: white">
-          <div>
-            <p class="speaker-desc">
-              Karthik Puvvada (known by his friends and audience as "KP") is a
-              5x founder, podcast host, angel investor, advisor, coach and a top
-              voice in the "build in public" movement.
-            </p>
-          </div>
+              alt="Evan You"
+            />
+            <figcaption style="color: white">Evan You</figcaption>
+          </figure>
         </div>
-        <figure class="alt">
-          <img
-            class="speaker-img"
-            src="
+      </li>
+      <li class="card" id="card_4">
+        <div class="card__content">
+          <div style="color: white">
+            <div>
+              <p class="speaker-desc">
+                Karthik Puvvada (known by his friends and audience as "KP") is a
+                5x founder, podcast host, angel investor, advisor, coach and a
+                top voice in the "build in public" movement.
+              </p>
+            </div>
+          </div>
+          <figure class="alt">
+            <img
+              class="speaker-img"
+              src="
             https://media.licdn.com/dms/image/v2/D4E03AQER6WgLI07vzw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1705801044880?e=1747872000&v=beta&t=U7qZCTHdVrHc1xeyGh6PWLJxUQ4YdwjgSTydeW-UNeo
             "
-            alt="Karthik Puvvada"
-          />
-          <figcaption style="color: white">Karthik Puvvada</figcaption>
-        </figure>
-      </div>
-    </li>
-    <li class="card" id="card_5">
-      <div class="card__content">
-        <div style="color: white">
-          <div>
-            <p class="speaker-desc">
-              Serial entrepreneur and pioneer of the digital nomad movement.
-              Built multiple $1M+/year bootstrapped startups and author of MAKE,
-              inspiring a new generation of indie makers.
-            </p>
-          </div>
+              alt="Karthik Puvvada"
+            />
+            <figcaption style="color: white">Karthik Puvvada</figcaption>
+          </figure>
         </div>
-        <figure class="alt">
-          <img
-            class="speaker-img"
-            src="
+      </li>
+      <li class="card" id="card_5">
+        <div class="card__content">
+          <div style="color: white">
+            <div>
+              <p class="speaker-desc">
+                Serial entrepreneur and pioneer of the digital nomad movement.
+                Built multiple $1M+/year bootstrapped startups and author of
+                MAKE, inspiring a new generation of indie makers.
+              </p>
+            </div>
+          </div>
+          <figure class="alt">
+            <img
+              class="speaker-img"
+              src="
               https://pbs.twimg.com/profile_images/1878086921726943233/vOx1kjeP_400x400.jpg
               "
-            alt="Ben Tossell"
-          />
-          <figcaption style="color: white">Ben Tossell</figcaption>
-        </figure>
-        <!-- Content here -->
-      </div>
-    </li>
-    <li class="card" id="card_6">
-      <div class="card__content">
-        <div style="color: white">
-          <div>
-            <p class="speaker-desc">
-              AI and machine learning advocate at Google DeepMind. Former Julia
-              Language org admin and Harvard graduate, bridging the gap between
-              cutting-edge AI research and developer communities.
-            </p>
-          </div>
+              alt="Ben Tossell"
+            />
+            <figcaption style="color: white">Ben Tossell</figcaption>
+          </figure>
+          <!-- Content here -->
         </div>
-        <figure class="alt">
-          <img
-            class="speaker-img"
-            src="
+      </li>
+      <li class="card" id="card_6">
+        <div class="card__content">
+          <div style="color: white">
+            <div>
+              <p class="speaker-desc">
+                AI and machine learning advocate at Google DeepMind. Former
+                Julia Language org admin and Harvard graduate, bridging the gap
+                between cutting-edge AI research and developer communities.
+              </p>
+            </div>
+          </div>
+          <figure class="alt">
+            <img
+              class="speaker-img"
+              src="
             https://pbs.twimg.com/profile_images/1856486626072915968/JEQpB9CW_400x400.jpg
             "
-            alt="Alex Albert"
-          />
-          <figcaption style="color: white">Alex Albert</figcaption>
-        </figure>
-      </div>
-    </li>
-  </ul>
-</section>
+              alt="Alex Albert"
+            />
+            <figcaption style="color: white">Alex Albert</figcaption>
+          </figure>
+        </div>
+      </li>
+    </ul>
+  </section>
+</main>
 <router-outlet />
-<footer style="position: sticky; width: 100%">
-  <div></div>
+<footer
+  style="
+    position: sticky;
+    width: 100%;
+    color: white;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  "
+>
+  <div>
+    <p>© 2025 Bolt Hackathon. All rights reserved.</p>
+  </div>
 </footer>
